View search suggest result

--- a/src/app.json
+++ b/src/app.json
@@ -13,6 +13,7 @@
     "pages/my-coupon/index",
     "pages/my-point/index",
     "pages/search/index",
+    "pages/search-more/index",
     "pages/category/index",
     "pages/category-detail/index"
   ],
